--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 body {
 	margin: 0;
 	padding: 0;
-	background: #fff;
+	background: #B8E986;
 	position: absolute;
 	width: 100%;
 	height: 100%;
